# desktop_screentime

./: .clang-format  .gitignore  AppEntry.cpp  AppEntry.h  AppTracker.cpp  AppTracker.h  CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  IWindowInterface.cpp  IWindowInterface.h  Readme.Md  main.cpp
.github/workflows/: build.yml
tests/: AppEntryTest.cpp  AppTrackerTest.cpp  DatabaseManagerTest.cpp  main.cpp
